[package]
name = "boinc_app_api"
version = "0.3.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "BOINC application API"
repository = "https://github.com/volunode/boinc-app-api-rs"
keywords = [
    "boinc",
    "api",
]
categories = [
    "api-bindings",
]
license = "Apache-2.0"

[dependencies]
enum-iter = { git = "https://github.com/vorot93/enum-iter" }
failure = "*"
futures = "*"
libc = "*"
maplit = "*"
macro-attr = "*"
enum_derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-core = "*"
tokio-timer = "*"
treexml = { git = "https://github.com/vorot93/treexml-rs" }
treexml_util = { git = "https://github.com/vorot93/treexml-util" }
